sratom (0.6.15) unstable; urgency=medium

  * Clean up code
  * Fix dependencies in pkg-config file
  * Override pkg-config dependency within meson
  * Replace duplicated dox_to_sphinx script with sphinxygen dependency
  * Constrain relative URI references to the base URI

 -- David Robillard <d@drobilla.net>  Sun, 30 Apr 2023 22:28:21 +0000

sratom (0.6.14) stable; urgency=medium

  * Add project metadata
  * Adopt REUSE machine-readable licensing standard

 -- David Robillard <d@drobilla.net>  Fri, 09 Sep 2022 17:29:00 +0000

sratom (0.6.12) stable; urgency=medium

  * Switch to meson build system

 -- David Robillard <d@drobilla.net>  Tue, 19 Jul 2022 01:13:03 +0000

sratom (0.6.10) stable; urgency=medium

  * Fix documentation installation directory
  * Fix potential blank node ID truncation

 -- David Robillard <d@drobilla.net>  Thu, 26 May 2022 23:27:00 +0000

sratom (0.6.8) stable; urgency=medium

  * Fix potential null pointer dereference

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 21:36:14 +0000

sratom (0.6.6) stable; urgency=medium

  * Fix various minor warnings and other code quality issues

 -- David Robillard <d@drobilla.net>  Sun, 27 Sep 2020 15:18:12 +0000

sratom (0.6.4) stable; urgency=medium

  * Make sratom_free() safe to call on NULL
  * Various minor code cleanups

 -- David Robillard <d@drobilla.net>  Sun, 10 Nov 2019 21:20:40 +0000

sratom (0.6.2) stable; urgency=medium

  * Various minor code cleanups

 -- David Robillard <d@drobilla.net>  Sun, 22 Jul 2018 18:48:51 +0000

sratom (0.6.0) stable; urgency=medium

  * Add sratom_set_env() for setting prefixes
  * Fix padding of constructed vectors (thanks Hanspeter Portner)
  * Fix warnings when building with ISO C++ compilers
  * Support round-trip serialisation of relative paths
  * Support sequences with beat time stamps
  * Upgrade to waf 1.8.14

 -- David Robillard <d@drobilla.net>  Tue, 20 Sep 2016 02:25:35 +0000

sratom (0.4.6) stable; urgency=medium
