@@ -1,14 +1,0 @@
-..
-   Copyright 2020-2021 David Robillard <d@drobilla.net>
-   SPDX-License-Identifier: ISC
-
-######
-Sratom
-######
-
-.. include:: summary.rst
-
-.. toctree::
-
-   overview
-   api/sratom
