@@ -1,15 +1,0 @@
-..
-   Copyright 2020-2021 David Robillard <d@drobilla.net>
-   SPDX-License-Identifier: ISC
-
-#############
-API Reference
-#############
-
-This section contains the generated documentation for all symbols in the public
-API.
-
-.. toctree::
-
-   api/sratom
-
