@@ -3,10 +3,12 @@
 
 # Project information
 
-project = "Sratom"
-copyright = "2020, David Robillard"
+project = "@SRATOM_TITLE@"
+copyright = "2023, David Robillard"
 author = "David Robillard"
 release = "@SRATOM_VERSION@"
+version = "@SRATOM_VERSION@"
+desc = "A small library for serializing LV2 atoms"
 
 # General configuration
 
@@ -52,7 +54,7 @@ if tags.has("singlehtml"):
     html_theme_options = {
         "body_max_width": "48em",
         "body_min_width": "48em",
-        "description": "A small library for serializing LV2 atoms",
+        "description": desc,
         "globaltoc_collapse": False,
         "globaltoc_maxdepth": 3,
         "logo_name": True,
@@ -67,7 +69,7 @@ else:
     html_theme_options = {
         "body_max_width": "60em",
         "body_min_width": "40em",
-        "description": "A small library for serializing LV2 atoms",
+        "description": desc,
         "globaltoc_collapse": True,
         "globaltoc_maxdepth": 1,
         "logo_name": True,
