@@ -2,8 +2,17 @@
    Copyright 2020-2021 David Robillard <d@drobilla.net>
    SPDX-License-Identifier: ISC
 
+######
+Sratom
+######
+
 Sratom is a small library for serializing `LV2 atoms`_.  Sratom reads/writes
 atoms from/to RDF, allowing them to be converted between binary and text or
 stored in a model.
+
+.. toctree::
+
+   overview
+   api/sratom
 
 .. _LV2 atoms: http://lv2plug.in/ns/ext/atom
